overlays/prd/resources/crider-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crider-service
  namespace: crider-back
spec:
  selector:
    app: crider
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
