overlays/prd/resources/crider-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crider-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  # - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crider-backend
            port:
              number: 80
